2004-05-15 Maarten Brock <sourceforge.brock AT dse.nl>
	committed by Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/c8051f020.h: newly added SiLabs (Cygnal) header file
	* device/include/c8051f000.h,
	* device/include/c8051f120.h,
	* device/include/c8051f300.h,
	* device/include/c8051f310.h,
	* device/include/c8051f320.h: updated (added _XPAGE, CAPN, CAPP,
	PWM16) and detab'ed

2004-05-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: mentioned sourceforge's delay between web frontend
	and mailing lists, doc'ed --no-peep-comments, removed reference
	to knoppix (newest version has no LyX/LaTeX), other minor changes
	* src/SDCCglue.c (glue): save 2 bytes stack space with 
	option --main-return. The ljmp could probably be avoided too

2004-05-14 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/mcs51/lkmem.c, as/mcs51/lkaomf51: fixed bug 954173

2004-05-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h: added IS_AUTO(symbol) test macro
	* src/SDCCopt.c (isLocalWithoutDef),
	* src/SDCCicode.c (operandFromSymbol): use the IS_AUTO test macro
	which adds a !IS_EXTERN codition. Fixes bugs #877426 and #751703.
	(credit to Maarten Brock for patch #949363, on which this is based)
	* support/regression/tests/bug-751703.c: some test cases of extern used
	within inner scopes.

2004-05-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.c (dwMatchTypes): structs must have matching
	SPEC_STRUCT
	* src/SDCCdwarf2.c (dwTagFromType): fix to handle recursive
	struct definitions
	* src/SDCCdwarf2.c (dwWriteModule, dwNewDebugSymbol, dwWriteEndFunction,
	dwWriteLabel): fix to create valid debugger symbols even when
	the module name has non-alphanumeric symbols in it
	* src/SDCCdwarf2.c (dwWriteSymbolInternal): better detection for
	when a variable's allocation has been optimized away
	

2004-05-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (hc08_emitDebuggerSymbol),